--- a/prechi2026/call-for-participants/index.html
+++ b/prechi2026/call-for-participants/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769999045" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770000205" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769999045" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770000205" />
 
   
 
@@ -96,6 +96,19 @@
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
+        }
+    }
+
+    @media (max-width: 767.98px) {
+        .navbar-brand {
+            white-space: normal;
+            max-width: 75%;
+            line-height: 1.2;
+        }
+
+        .container-fluid {
+            align-items: center;
+            /* Ensure vertical centering */
         }
     }
 </style>
@@ -196,7 +209,7 @@
 <!-- Group 1: Participant Registration -->
 <div class="row mb-5" id="participant-registration">
   <div class="col-lg-10 col-xl-10 mx-auto mb-3">
-    <h3 class="h5 fw-bold text-secondary border-bottom pb-2">1. General Registration</h3>
+    <h3 class="h5 fw-bold text-secondary border-bottom pb-2">1. General Registration (Mandatory for all participants)</h3>
   </div>
   
   <div class="col-lg-11 col-xl-11 mx-auto">
@@ -227,7 +240,7 @@
 <!-- Group 2: Presenter Registration -->
 <div class="row mb-5" id="presenter-registration">
   <div class="col-lg-10 col-xl-10 mx-auto mb-3">
-    <h3 class="h5 fw-bold text-secondary border-bottom pb-2">2. For Presenters</h3>
+    <h3 class="h5 fw-bold text-secondary border-bottom pb-2">2. For Presenters (Optional for those who want to share)</h3>
   </div>
 
   <!-- Paper Presentations -->
@@ -292,7 +305,7 @@
 <!-- Group 3: Promotion -->
 <div class="row mb-5" id="promotion-opportunities">
   <div class="col-lg-10 col-xl-10 mx-auto mb-3">
-    <h3 class="h5 fw-bold text-secondary border-bottom pb-2">3. Promotion Opportunities</h3>
+    <h3 class="h5 fw-bold text-secondary border-bottom pb-2">3. Promotion Opportunities (Optional)</h3>
   </div>
 
   <!-- Conference Booklet Flyers -->
@@ -349,8 +362,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769999045" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769999045"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770000205" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770000205"></script>
 
 </body>
 </html>
