--- a/prechi2026/index.html
+++ b/prechi2026/index.html
@@ -90,10 +90,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1769999045" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770000205" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1769999045" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770000205" />
 
   
 
@@ -113,6 +113,19 @@
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
+        }
+    }
+
+    @media (max-width: 767.98px) {
+        .navbar-brand {
+            white-space: normal;
+            max-width: 75%;
+            line-height: 1.2;
+        }
+
+        .container-fluid {
+            align-items: center;
+            /* Ensure vertical centering */
         }
     }
 </style>
@@ -289,8 +302,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1769999045" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1769999045"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770000205" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770000205"></script>
 
 </body>
 </html>
