updated nav bar

--- a/prechi2026/organizers/index.html
+++ b/prechi2026/organizers/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770000205" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770022864" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770000205" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770022864" />
 
   
 
@@ -117,10 +117,9 @@
     style="margin-bottom: 0px!important;">
     <div class="container-fluid position-relative px-3 px-md-5">
 
-        <a class="navbar-brand order-0 fw-bold" href="/prechi2026/">
-            <img src="/prechi2026/assets/images/gba-logo.svg" alt="Logo" height="30"
-                class="d-inline-block align-text-top me-2">
-            Pre-CHI 2026
+        <a class="navbar-brand order-0 fw-bold d-flex align-items-center" href="/prechi2026/">
+            <img src="/prechi2026/assets/images/gba-logo.svg" alt="Logo" height="30" class="me-2">
+            <span>Pre-CHI 2026</span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-bs-toggle="collapse"
@@ -430,8 +429,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770000205" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770000205"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770022864" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770022864"></script>
 
 </body>
 </html>
