--- a/prechi2026/sponsors/index.html
+++ b/prechi2026/sponsors/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770022864" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770025326" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770022864" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770025326" />
 
   
 
@@ -118,8 +118,8 @@
     <div class="container-fluid position-relative px-3 px-md-5">
 
         <a class="navbar-brand order-0 fw-bold d-flex align-items-center" href="/prechi2026/">
-            <img src="/prechi2026/assets/images/gba-logo.svg" alt="Logo" height="30" class="me-2">
-            <span>Pre-CHI 2026</span>
+            <img src="/prechi2026/assets/images/gba-logo.svg" alt="Logo" height="25" class="me-2">
+            <span><span class="text-nowrap">Pre-CHI</span> <span class="text-nowrap">2026</span></span>
         </a>
 
         <button class="navbar-toggler order-1" type="button" data-bs-toggle="collapse"
@@ -205,8 +205,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770022864" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770022864"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770025326" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770025326"></script>
 
 </body>
 </html>
