added workshop information

--- a/prechi2026/program/index.html
+++ b/prechi2026/program/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770025326" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770121751" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770025326" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770121751" />
 
   
 
@@ -268,20 +268,7 @@
           <div class="col-md-9 col-lg-10">
             <h5 class="mb-2">Workshops &amp; Panel Discussion</h5>
             
-            <!-- <div class="mt-3 mb-2">
-              <span class="fw-bold text-dark d-block">Workshop 1</span>
-              <span class="text-muted small">Generative AI & Narrative Therapy</span>
-            </div>
 
-            <div class="mb-2">
-              <span class="fw-bold text-dark d-block">Workshop 2</span>
-              <span class="text-muted small">Open Hardware Co-creation</span>
-            </div>
-
-            <div class="mb-0">
-              <span class="fw-bold text-dark d-block">Panel Discussion</span>
-              <span class="text-muted small">Development Prospects of GBA HCI & Junior Researcher Growth</span>
-            </div> -->
           </div>
         </div>
 
@@ -305,6 +292,45 @@
           </div>
         </div>
 
+      </div>
+
+      <!-- Workshop Details -->
+      <div class="mb-5">
+        <h2 class="h4 mb-4 border-bottom pb-2">Workshop Details</h2>
+
+        <!-- Registration Info -->
+        <div class="alert alert-light border mt-3" role="alert">
+          <strong>Note:</strong> Workshops are limited to 30 participants (first-come, first-served). Please select your workshop preference when <a href="/prechi2026/call-for-participants/#participant-registration">registering as a participant</a>.
+        </div>
+
+        <!-- Workshop 1 -->
+        <div class="mt-4 mb-5">
+          <h6 class="fw-bold text-dark">Workshop 1: Statistical Analysis of Qualitative and Quantitative Data with R</h6>
+          <p class="mb-2"><strong>Organizer:</strong> <a href="https://recfro.github.io/" target="_blank">Prof. RAY LC</a></p>
+          <p class="text-justify">
+            <strong>Overview:</strong> You have collected your survey or reaction time data, and now you need to know what's the appropriate methods of analysis and express the right assumptions and limitations. Welcome to this workshop on statistical analysis using R and related tools. We will start from experimental design, to proper methods of data collection, and then emphasize how to analyze qualitative and quantative data given those criteria. Topics to be addressed includes significance testing, normatlity assumptions, regression analysis, survey analysis, power analysis, ANOVAs, nonparameteric tests. 
+
+            R and R Studio should be installed on your own laptops in preparation for this hands-on workshop (<a href="https://www.r-project.org/" target="_blank">https://www.r-project.org/</a>, <a href="https://posit.co/download/rstudio-desktop/" target="_blank">https://posit.co/download/rstudio-desktop/</a>). Other tools like pandas on python is similar, but we pick R for its library of features and as example for easily analyzing large datasets with one set of pre-customized code. 
+
+            Make your analyses efficient and speedy, and provide valid arguments for CHI in this workshop!
+          </p>
+        </div>
+
+        <!-- Workshop 2 -->
+        <div class="mb-4">
+          <h6 class="fw-bold text-dark">Workshop 2: IxDL "Interaction Dictionary" Card Game Workshop</h6>
+          <p class="mb-2">
+            <strong>Organizer:</strong> <a href="https://designschool.sustech.edu.cn/cn/about/team/faculty/377.html" target="_blank">Prof. Tao Luo</a>
+          </p>
+          
+          <p class="text-justify">
+            <strong>Background:</strong> IxDL (Interaction Design Language), founded by Professor Tao Luo, is a design language dedicated to transforming complex and abstract interaction logic into precise, intuitive visual expressions. Based on this framework, Prof. Luo has published Interaction Design Language: The Art of Conversing with All Things and the Universal Interaction Gesture Dictionary. These works have been incorporated into the design guidelines of leading tech companies and have gained widespread acclaim on social platforms like Xiaohongshu. To date, IxDL has been implemented at enterprises such as NetEase Games and ECOVACS Robotics, yielding numerous innovative results. Its supporting "IxDL Card Game" training has been successfully conducted at top-tier companies and universities, including Philips, City University of Hong Kong, and Guangzhou Academy of Fine Arts.
+          </p>
+
+          <p class="text-justify">
+            <strong>Overview:</strong> This workshop marks the debut of the "IxDL Interaction Dictionary Card Game." Based on the upcoming second edition of the Universal Interaction Gesture Dictionary, we have deconstructed complex interaction logic into 36 universal interaction mechanisms and over 40 common Control Items, all presented in the form of cards. In a relaxed and engaging game atmosphere, participants will use these cards to explore innovative cross-platform interaction solutions through free combination, breaking conventional thinking patterns. This workshop aims to help designers and developers expand their cognitive boundaries, enhance their perception and creative efficiency in real-world projects, improve team communication, and comprehensively strengthen professional competitiveness.
+          </p>
+        </div>
       </div>
 
     </div>
@@ -334,8 +360,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770025326" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770025326"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770121751" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770121751"></script>
 
 </body>
 </html>
