--- a/prechi2026/call-for-participants/index.html
+++ b/prechi2026/call-for-participants/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770025326" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770121751" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770025326" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770121751" />
 
   
 
@@ -222,6 +222,9 @@
           <p class="card-text text-secondary mb-2" style="max-width: 700px;">
             Join us to connect with fellow researchers, engage in inspiring discussions, and explore the latest HCI trends in the Greater Bay Area. Open to all attendes!
           </p>
+          <p class="card-text text-secondary mb-2" style="max-width: 700px;">
+            Please indicate which day(s) and workshop(s) you plan to attend when registering. See the <a href="/prechi2026/program/">Program</a> page for details.
+          </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
           <p class="text-danger fw-bold mb-2">
@@ -361,8 +364,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770025326" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770025326"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770121751" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770121751"></script>
 
 </body>
 </html>
