added workshop section link

--- a/prechi2026/program/index.html
+++ b/prechi2026/program/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770121751" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770122632" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770121751" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770122632" />
 
   
 
@@ -295,7 +295,7 @@
       </div>
 
       <!-- Workshop Details -->
-      <div class="mb-5">
+      <div class="mb-5" id="workshop-details">
         <h2 class="h4 mb-4 border-bottom pb-2">Workshop Details</h2>
 
         <!-- Registration Info -->
@@ -360,8 +360,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770121751" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770121751"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770122632" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770122632"></script>
 
 </body>
 </html>
