updated workshop link

--- a/prechi2026/call-for-participants/index.html
+++ b/prechi2026/call-for-participants/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770122632" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770123398" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770122632" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770123398" />
 
   
 
@@ -223,7 +223,7 @@
             Join us to connect with fellow researchers, engage in inspiring discussions, and explore the latest HCI trends in the Greater Bay Area. Open to all attendes!
           </p>
           <p class="card-text text-secondary mb-2" style="max-width: 700px;">
-            Please indicate which day(s) and workshop(s) you plan to attend when registering. See the <a href="/prechi2026/program/">Program</a> page for details.
+            Please indicate which day(s) and workshop(s) you plan to attend when registering. See the <a href="/prechi2026/program/">Program</a> and <a href="/prechi2026/program/#workshop-details">Workshop Details</a> for details.
           </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
@@ -364,8 +364,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770122632" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770122632"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770123398" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770123398"></script>
 
 </body>
 </html>
