--- a/prechi2026/program/index.html
+++ b/prechi2026/program/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770122632" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770123398" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770122632" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770123398" />
 
   
 
@@ -300,7 +300,7 @@
 
         <!-- Registration Info -->
         <div class="alert alert-light border mt-3" role="alert">
-          <strong>Note:</strong> Workshops are limited to 30 participants (first-come, first-served). Please select your workshop preference when <a href="/prechi2026/call-for-participants/#participant-registration">registering as a participant</a>.
+          <strong>Note:</strong> Workshops are limited to 30 participants (first-come, first-served). Please select your workshop preference when <a href="/prechi2026/call-for-participants/#participant-registration">registering as participant</a>.
         </div>
 
         <!-- Workshop 1 -->
@@ -360,8 +360,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770122632" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770122632"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770123398" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770123398"></script>
 
 </body>
 </html>
