updated program time

--- a/prechi2026/program/index.html
+++ b/prechi2026/program/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770123398" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770127143" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770123398" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770127143" />
 
   
 
@@ -230,7 +230,7 @@
             <div class="fw-bold text-primary">12:30 – 14:00</div>
           </div>
           <div class="col-md-9 col-lg-10">
-            <h5 class="mb-1">Lunch &amp; Networking</h5>
+            <h5 class="mb-1">Lunch</h5>
           </div>
         </div>
 
@@ -263,7 +263,7 @@
         <!-- 09:00 - 12:30 -->
         <div class="row py-3 border-bottom">
           <div class="col-md-3 col-lg-2">
-            <div class="fw-bold text-primary">09:00 – 12:30</div>
+            <div class="fw-bold text-primary">09:00 – 12:00</div>
           </div>
           <div class="col-md-9 col-lg-10">
             <h5 class="mb-2">Workshops &amp; Panel Discussion</h5>
@@ -275,10 +275,10 @@
         <!-- 12:30 - 13:30 -->
         <div class="row py-3 border-bottom">
           <div class="col-md-3 col-lg-2">
-            <div class="fw-bold text-primary">12:30 – 13:30</div>
+            <div class="fw-bold text-primary">12:00 – 13:30</div>
           </div>
           <div class="col-md-9 col-lg-10">
-            <h5 class="mb-1">Lunch &amp; Networking</h5>
+            <h5 class="mb-1">Lunch</h5>
           </div>
         </div>
 
@@ -360,8 +360,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770123398" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770123398"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770127143" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770127143"></script>
 
 </body>
 </html>
