updated call for participant description

--- a/prechi2026/call-for-participants/index.html
+++ b/prechi2026/call-for-participants/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770127143" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770359231" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770127143" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770359231" />
 
   
 
@@ -255,7 +255,7 @@
         <div class="flex-grow-1 text-center text-md-start mb-3 mb-md-0">
           <h3 class="card-title h4 mb-2">Paper Presentations</h3>
           <p class="card-text text-secondary mb-0" style="max-width: 700px;">
-            Have a paper accepted at CHI 2026, CSCW 2025, or other influential conferences or journals in HCI? Share your work with the local community! This is a fantastic opportunity to rehearse your talk, extend the audience of your work, and get feedback.
+            Have a paper accepted at CHI 2026, CSCW 2026, or other influential conferences or journals in HCI? Share your work with the local community! This is a fantastic opportunity to rehearse your talk, extend the audience of your work, and get feedback.
           </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
@@ -323,7 +323,7 @@
             Increase visibility for your lab, school, or academic program. We invite you to contribute introductory page(s) to our conference booklet to reach our targeted audience.
           </p>
           <p class="card-text text-secondary mt-2 fst-italic" style="max-width: 700px;">
-            <strong style="color: #dc3545;">Note:</strong> Flyers size: A5 (210 mm (H) × 148.5 mm (W)), max two pages.
+            <strong style="color: #dc3545;">Note:</strong> Size: A5 (210 mm (H) × 148.5 mm (W)), max two pages.
             <br />
             Submission material: PDF file.
           </p>
@@ -364,8 +364,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770127143" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770127143"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770359231" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770359231"></script>
 
 </body>
 </html>
