--- a/prechi2026/program/index.html
+++ b/prechi2026/program/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770127143" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770359231" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770127143" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770359231" />
 
   
 
@@ -192,7 +192,7 @@
 
       <!-- Day 1 Schedule -->
       <div class="mb-5">
-        <h2 class="h4 mb-4 border-bottom pb-2">Day 1: Saturday, March 21</h2>
+        <h4 class="h4 mb-4  pb-2">Day 1: Saturday, March 21</h4>
         
         <!-- 09:00 - 09:30 -->
         <div class="row py-3 border-bottom">
@@ -258,7 +258,7 @@
 
       <!-- Day 2 Schedule -->
       <div class="mb-5">
-        <h2 class="h4 mb-4 border-bottom pb-2">Day 2: Sunday, March 22</h2>
+        <h4 class="h4 mb-4 pb-2">Day 2: Sunday, March 22</h4>
         
         <!-- 09:00 - 12:30 -->
         <div class="row py-3 border-bottom">
@@ -296,7 +296,7 @@
 
       <!-- Workshop Details -->
       <div class="mb-5" id="workshop-details">
-        <h2 class="h4 mb-4 border-bottom pb-2">Workshop Details</h2>
+        <h1 class="h2 mb-4 border-bottom pb-2">Workshop Details</h1>
 
         <!-- Registration Info -->
         <div class="alert alert-light border mt-3" role="alert">
@@ -305,7 +305,7 @@
 
         <!-- Workshop 1 -->
         <div class="mt-4 mb-5">
-          <h6 class="fw-bold text-dark">Workshop 1: Statistical Analysis of Qualitative and Quantitative Data with R</h6>
+          <h5 class="fw-bold text-dark">Workshop 1: Statistical Analysis of Qualitative and Quantitative Data with R</h5>
           <p class="mb-2"><strong>Organizer:</strong> <a href="https://recfro.github.io/" target="_blank">Prof. RAY LC</a></p>
           <p class="text-justify">
             <strong>Overview:</strong> You have collected your survey or reaction time data, and now you need to know what's the appropriate methods of analysis and express the right assumptions and limitations. Welcome to this workshop on statistical analysis using R and related tools. We will start from experimental design, to proper methods of data collection, and then emphasize how to analyze qualitative and quantative data given those criteria. Topics to be addressed includes significance testing, normatlity assumptions, regression analysis, survey analysis, power analysis, ANOVAs, nonparameteric tests. 
@@ -318,7 +318,7 @@
 
         <!-- Workshop 2 -->
         <div class="mb-4">
-          <h6 class="fw-bold text-dark">Workshop 2: IxDL "Interaction Dictionary" Card Game Workshop</h6>
+          <h5 class="fw-bold text-dark">Workshop 2: IxDL "Interaction Dictionary" Card Game Workshop</h5>
           <p class="mb-2">
             <strong>Organizer:</strong> <a href="https://designschool.sustech.edu.cn/cn/about/team/faculty/377.html" target="_blank">Prof. Tao Luo</a>
           </p>
@@ -360,8 +360,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770127143" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770127143"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770359231" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770359231"></script>
 
 </body>
 </html>
