updated accom guide

--- a/prechi2026/venue/index.html
+++ b/prechi2026/venue/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770359231" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770610978" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770359231" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770610978" />
 
   
 
@@ -201,6 +201,15 @@
         </p>
       </div>
 
+      <!-- Accommodation -->
+      <div class="mb-5">
+        <h2 class="h3 fw-bold mb-3 border-start border-4 border-primary ps-3">Accommodation Guidance</h2>
+        <p class="lead text-secondary">
+          We have prepared a list of recommended hotels near the venue. Please check the document for details.
+          <a href="https://my.feishu.cn/wiki/Q1pNwxwKri4HYQklmYrcCUX0nYf?from=from_copylink" target="_blank">[link]</a>
+        </p>
+      </div>
+
       
 
       <!-- Map Container -->
@@ -267,8 +276,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770359231" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770359231"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770610978" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1770610978"></script>
 
 </body>
 </html>
