workshop registration closed

--- a/prechi2026/call-for-participants/index.html
+++ b/prechi2026/call-for-participants/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770610978" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1771728527" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770610978" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1771728527" />
 
   
 
@@ -223,7 +223,10 @@
             Join us to connect with fellow researchers, engage in inspiring discussions, and explore the latest HCI trends in the Greater Bay Area. Open to all attendes!
           </p>
           <p class="card-text text-secondary mb-2" style="max-width: 700px;">
-            Please indicate which day(s) and workshop(s) you plan to attend when registering. See the <a href="/prechi2026/program/">Program</a> and <a href="/prechi2026/program/#workshop-details">Workshop Details</a> for details.
+            Please indicate which day(s) you plan to attend when registering.
+          </p>
+          <p class="card-text text-secondary mb-2 fst-italic" style="max-width: 700px;">  
+            <strong class="text-danger ">Note:</strong> Workshop registration is now full and closed. General registration for the main event continues normally.
           </p>
         </div>
         <div class="text-center ms-md-4" style="min-width: 200px;">
@@ -364,8 +367,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770610978" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770610978"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1771728527" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1771728527"></script>
 
 </body>
 </html>
