--- a/prechi2026/program/index.html
+++ b/prechi2026/program/index.html
@@ -73,10 +73,10 @@
 
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1770610978" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/conference.bundle.css?t=1771728527" />
   
   
-  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1770610978" />
+  <link rel="stylesheet" href="/prechi2026/assets/css/main.css?t=1771728527" />
 
   
 
@@ -299,8 +299,8 @@
         <h1 class="h2 mb-4 border-bottom pb-2">Workshop Details</h1>
 
         <!-- Registration Info -->
-        <div class="alert alert-light border mt-3" role="alert">
-          <strong>Note:</strong> Workshops are limited to 30 participants (first-come, first-served). Please select your workshop preference when <a href="/prechi2026/call-for-participants/#participant-registration">registering as participant</a>.
+        <div class="alert alert-warning border mt-3" role="alert">
+          <strong>Notice:</strong> Workshop registration is now full and closed. Thank you for your interest! <a href="/prechi2026/call-for-participants/#participant-registration">General registration</a> for the main event continues normally.
         </div>
 
         <!-- Workshop 1 -->
@@ -360,8 +360,8 @@
     </div>
   </div>
 </div>
-<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1770610978" data-baseurl="/prechi2026"></script>
-  <script type="module" src="/prechi2026/assets/js/main.js?t=1770610978"></script>
+<script type="module" src="/prechi2026/assets/js/conference.bundle.js?t=1771728527" data-baseurl="/prechi2026"></script>
+  <script type="module" src="/prechi2026/assets/js/main.js?t=1771728527"></script>
 
 </body>
 </html>
